# CityBuilder

./: CMakeLists.txt  LICENSE  README.md  roadmap.md
.github/workflows/: cmake-multi-platform.yml
assets/: Roboto-Regular-LICENSE
src/: Buildings.cpp  Buildings.h  Data_types.h  Game.h  Tile.cpp  Tile.h  UIElements.cpp  UIElements.h  VFX.cpp  VFX.h  init_world.cpp  main.cpp  world.cpp
